Crash in WebCore:  WebCore::AudioSession::beganAudioInterruption + 62 https://bugs.webkit.org/show_bug.cgi?id=119406

Reviewed by Eric Carlson.

Unregister for AudioSession interruption events when being destroyed.

* platform/audio/ios/AudioDestinationIOS.cpp:
(WebCore::AudioDestinationIOS::~AudioDestinationIOS):


Canonical link: https://commits.webkit.org/137350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153599 268f45cc-cd09-0410-ab3c-d52691b4dbfc